--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,45 @@
 <ion-app>
-  <ion-split-pane>
-    <ion-menu type="overlay">
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
-                {{p.title}}
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet main></ion-router-outlet>
-  </ion-split-pane>
+    <ion-split-pane>
+
+        <ion-menu type="overlay" *transloco="let t">
+            <ion-header>
+                <ion-toolbar color="tertiary">
+                    <ion-title>Menu</ion-title>
+                </ion-toolbar>
+            </ion-header>
+            <ion-content>
+                <ion-list>
+                    <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+                        <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
+                            <ion-icon slot="start" [name]="p.icon"></ion-icon>
+                            <ion-label>
+                                {{p.title}}
+                            </ion-label>
+                        </ion-item>
+                    </ion-menu-toggle>
+
+                    <ion-list-header color="medium">
+                        <ion-label>{{t.languages}}</ion-label>
+                    </ion-list-header>
+
+                    <ion-item (click)="setLang('pt-PT')">
+                        <ion-label>{{t.langPt}}</ion-label>
+                    </ion-item>
+                    <ion-item (click)="setLang('pt-BR')">
+                        <ion-label>{{t.langBr}}</ion-label>
+                    </ion-item>
+                    <ion-item (click)="setLang('en')">
+                        <ion-label>{{t.langEn}}</ion-label>
+                    </ion-item>
+                    <ion-item (click)="setLang('es')">
+                        <ion-label>{{t.langEs}}</ion-label>
+                    </ion-item>
+
+                </ion-list>
+            </ion-content>
+        </ion-menu>
+
+        <ion-router-outlet main></ion-router-outlet>
+
+    </ion-split-pane>
 </ion-app>
